--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,9 @@
+# %player_name% プレイヤーの名前
+# %player_uuid% プレイヤーのUUID
+
 shift_f:
-  player_command:
-    - "say eat negi"
-  server_command:
-    - "say not eat negi 2"
+  player_commands:
+    - "say executed as player (negi)"
+  server_commands:
+    - "say executed as console (negi)"
 
